Convert Fellowship to a completely async course (#49)

--- a/docs/unit2.mdx
+++ b/docs/unit2.mdx
@@ -160,7 +160,7 @@ For `.zshrc`, please refer to this [ZSH Prompt Guide](https://blog.devgenius.io/
 
 ## Assignment
 
-This week, your assignment will be to create a specific file directory structure using terminal commands. Once completed, you will send a screenshot of your terminal with the commands you ran and their respective outputs.
+This unit, your assignment will be to create a specific file directory structure using terminal commands. Once completed, you will send a screenshot of your terminal with the commands you ran and their respective outputs.
 
 1. Choose a folder you would like to do your projects in. In this case, I chose `/Users/name/Documents`
 2. Create a directory called `Fellowship` and then create another directory inside called `Unit2`.
@@ -190,7 +190,7 @@ Call the first one `vim.txt` and the second one `nano.txt`.
     cat vim.txt
     ```
     
-5. Take a screenshot of your output. It should match the example below! Post your screenshot under [Unit 2 thread](https://ptb.discord.com/channels/772739905981644850/927468256070086696/930540634224345119) in the `#announcements`channel. 
+5. Your output should match the example below: 
     
     ![Submission](../static/img/unit2/submission.png)
     
@@ -198,7 +198,7 @@ Call the first one `vim.txt` and the second one `nano.txt`.
 ### Deliverables
 
 **Required Tasks**
- - Follow the directions above to set up your project directory. Take a screenshot and post it in the announcements thread.
+ - Follow the directions above to practice using the terminal.
  - Complete the [Quiz](https://forms.gle/1whc3n6FjNNoq5ye9)
 
 **Optional** **Stretch Goals**
@@ -208,7 +208,7 @@ Call the first one `vim.txt` and the second one `nano.txt`.
 
 ### Submission
 
-Send your screenshot in the Discord channel and complete [the quiz](https://forms.gle/huFVCdN48dcfty256) for this week.
+Send your screenshot in the Discord channel and complete [the quiz](https://forms.gle/huFVCdN48dcfty256) for this unit.
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn3Mrv8_RShKjSLfD-th7L0LrNWVyXjtfEuQzz_EWMFhwGHQ/viewform?embedded=true" width="100%" height="3400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
