--- a/docs/unit5.mdx
+++ b/docs/unit5.mdx
@@ -9,7 +9,7 @@ import Video from '@site/src/components/Video';
 
 ## Welcome to Unit 5
 
-This week we take a quick detour to discuss personal branding! When it comes to your career, professional development is just as important as software development.
+This unit we take a quick detour to discuss personal branding! When it comes to your career, professional development is just as important as software development.
 
 ## Unit 5 Lecture Video
 
@@ -208,7 +208,7 @@ By default your LinkedIn URL is your name+random characters. This looks unprofes
 
 ## Assignment
 
-This week, your assignment is to create a resume and a LinkedIn.
+This unit, your assignment is to create a resume and a LinkedIn.
 
 ### Deliverables
 
@@ -225,8 +225,8 @@ This week, your assignment is to create a resume and a LinkedIn.
 
 **Optional** **Stretch Goals**
 
-- Post your LinkedIn url in the Discord thread and connect with others in the Fellowship!
-- Sign up to review another resume on the submission form.
+- Post your LinkedIn url in the #networking Discord channel to connect with others in the Fellowship!
+- Post your resume in the #resume-reviews Discord channel and provide feedback on someone else's resume!
 
 
 ### Submission
