Small general improvements

--- a/docs/unit1.mdx
+++ b/docs/unit1.mdx
@@ -19,7 +19,7 @@ This unit we are going to briefly cover GitHub, READMEs, Markdown, and GitHub Pr
 
 [GitHub](https://github.com) is a website for you to backup your code. It makes it easy for you to collaborate on projects with others. You should treat it like a portfolio for your work as a software developer.
 
-Create an account at [https://github.com/signup](https://github.com/signup)  
+Create an account at [https://github.com/signup](https://github.com/signup). Optional, but highly recommended to also sign up for the [Student Developer Pack](https://education.github.com/pack)!  
 *Note: Since you will have this for a long time, use your personal email, not your school email.*
 
 ## README.md
