--- a/docs/unit8.mdx
+++ b/docs/unit8.mdx
@@ -16,7 +16,7 @@ This will let us spice up our project, and include more from the web.
 
 <Video src="https://www.youtube.com/embed/wHWBw-lHdLM" />
 
-Only the 100 seconds, we won't be talking about how to build an API (around 2:30)
+Only the first 100 seconds, we won't be talking about how to build an API (around 2:30)
 <Video src="https://www.youtube.com/embed/-MTSQjw5DrM" />
 
 <Video src="https://www.youtube.com/embed/eIQh02xuVw4" />
