Change aside to block quotes

--- a/docs/unit2.mdx
+++ b/docs/unit2.mdx
@@ -125,10 +125,7 @@ If you are on MacOS (post Catalina) you may have a `.zshrc` file instead.
 
 This file will run every time that you start a new terminal. Inside of it, you can add your own custom aliases, functions, and customize your prompt.
 
-<aside>
-💡 When you make changes to the `.bashrc` or `.zshrc`, those changes won't take effect until open up a new Terminal window or run `source .bashrc` (`source .zshrc` on Mac)
-
-</aside>
+> 💡 When you make changes to the `.bashrc` or `.zshrc`, those changes won't take effect until open up a new Terminal window or run `source .bashrc` (`source .zshrc` on Mac)
 
 ### Functions and Aliases
 
