--- a/docs/unit3.mdx
+++ b/docs/unit3.mdx
@@ -101,11 +101,8 @@ SSH, also known as Secure Shell, is a way to let users access and authenticate t
 
 When we are working with our GitHub repository, you will need to identify yourself with your username and personal access token. With SSH keys, you can connect to GitHub without supplying your username and password each time. To use SSH with GitHub, you will need to create the key, then add it to your GitHub account.
 
-<aside>
-💡 As of August 13, 2021, [GitHub no longer supports https password authentication](https://github.blog/changelog/2021-08-12-git-password-authentication-is-shutting-down/). 
+> 💡 As of August 13, 2021, [GitHub no longer supports https password authentication](https://github.blog/changelog/2021-08-12-git-password-authentication-is-shutting-down/). 
 You **must** use SSH moving forward.
-
-</aside>
 
 ### To create an SSH Key
 
