--- a/docs/unit3.mdx
+++ b/docs/unit3.mdx
@@ -17,13 +17,13 @@ This unit, we'll be combining what we've done in the past 2 units, to learn more
 
 ## Git
 
-### 🤔 Why git?
+### 🤔 Why Git?
 
-And why not google drive? 🤨👎
+And why not Google Drive? 🤨👎
 
 A reason why Google Docs has become so popular because it made an easy way for a team to collaborate on a document together. A powerful tool Google Docs provides is `revision history` which gives document owners a way to view and manage past versions of the document. This can be called **version control.**
 
-Git is the leading form of version control for source code. It is built around the importance of tracking changes and managing collaboration. These features make Git the right tool for programming small and large projects. 
+Git is the leading form of version control for source code. It is built around the importance of tracking changes and managing collaboration. These features make Git the right tool for programming small and large projects. While it may be unfamiliar to you now, Git is one of the most used technologies across any area of software development so stick through it and you will reap the benefits later on.
 
 ### The Git Workflow
 
@@ -99,13 +99,10 @@ SSH, also known as Secure Shell, is a way to let users access and authenticate t
 
 ### Why are we using SSH?
 
-When we are working with out GitHub repository, you will need to identify yourself with your username and personal access token. With SSH keys, you can connect to GitHub without supplying your username and password each time. To use SSH with GitHub, you will need to create the key, then add it to your GitHub account.
+When we are working with our GitHub repository, you will need to identify yourself with your username and personal access token. With SSH keys, you can connect to GitHub without supplying your username and password each time. To use SSH with GitHub, you will need to create the key, then add it to your GitHub account.
 
-<aside>
-💡 As of August 13, 2021, [GitHub no longer supports https password authentication](https://github.blog/changelog/2021-08-12-git-password-authentication-is-shutting-down/). 
+> 💡 As of August 13, 2021, [GitHub no longer supports https password authentication](https://github.blog/changelog/2021-08-12-git-password-authentication-is-shutting-down/). 
 You **must** use SSH moving forward.
-
-</aside>
 
 ### To create an SSH Key
 
