--- a/docs/unit7.mdx
+++ b/docs/unit7.mdx
@@ -415,6 +415,22 @@ This will run the react app, and you will be able to see it in your browser. It 
 
 ![React Compiled Terminal Output](../static/img/unit7/react-compiled.png)
 
+## GitHub Pages
+
+If you don't have Github Pages set up, here's a quick recap.
+**GitHub Pages allows us to deploy our site quickly, easily, and for free**.
+
+To activate GitHub pages for your repository:
+1. Click on the “Settings” tab
+2. Click “Pages”
+3. Select “main” as your Source Branch
+4. Click “Save”
+5. Check “Enforce HTTPS”
+
+![GitHub Pages](../static/img/unit4/gh-pages.png)
+
+Now, whenever you push a new commit to the `main` branch of your repository, the website will be **automatically updated**.
+
 ## Deploying React to GitHub Pages
 
 We can also share our new React website with GitHub Pages as well! This is a little less straightforward, since we are using React. We are going to have to install `gh-pages` , a node module that lets us publish to GitHub pages. 
