--- a/docs/unit7.mdx
+++ b/docs/unit7.mdx
@@ -415,9 +415,9 @@ This will run the react app, and you will be able to see it in your browser. It 
 
 ![React Compiled Terminal Output](../static/img/unit7/react-compiled.png)
 
-## GitHub Pages
+## Setting Up GitHub Pages
 
-If you don't have Github Pages set up, here's a quick recap.
+If you don't have Github Pages set up yet, here's a quick recap.
 **GitHub Pages allows us to deploy our site quickly, easily, and for free**.
 
 To activate GitHub pages for your repository:
